# mcp-server

./: .gitignore  .mcp.json  .mcp.json.bak  ARCHIVAL_LOG.md  ARCHIVE_COMPARISON.md  CLAUDE.md  CLAUDEMD-TEMPLATE.json  CODEREF-BRIEFING.md  CODEREF-ECOSYSTEM-GUIDE.md  CODEREF_DOCS_CAPABILITIES.md  CODEREF_DOCS_INTEGRATION_GAP.md  CODEREF_DOCS_QUICK_REFERENCE.txt  COMPLETE_COMMAND_AUDIT.md  CONFIGURATION_ARCHITECTURE_GUIDE.md  CONFIGURATION_GUIDE_INDEX.md  CONFIGURATION_VISUAL_GUIDE.md  Dockerfile  ECOSYSTEM_CONSISTENCY_REVIEW.md  ECOSYSTEM_PROOF_COMPLETE.md  ECOSYSTEM_PROOF_TEST_SETUP_COMPLETE.md  ECOSYSTEM_QUICK_REFERENCE.md  ECOSYSTEM_TOOLS_MATRIX.md  ECOSYSTEM_VIABILITY_ASSESSMENT.md  KNOWLEDGE-STRUCTURE-TEMPLATE.md  MCP-CONFIGURATION-GUIDE.md  MCP-INTERNET-ACCESS-GUIDE.md  MCP_SERVER_CACHE_ISSUE.md  MIGRATION_WORKING_TO_WORKORDER.md  PROFESSIONAL_TESTING_REVIEW.md  PROOF_TESTS_READY_SUMMARY.md  PROOF_TEST_STATUS.txt  QUICK_CONFIG_REFERENCE.md  RATING_COMPARISON.md  README.md  README_CONFIGURATION_GUIDES.md  README_TESTING.md  REAL_TOOL_EXECUTION_REPORT.md  REVIEW_FINDINGS_SUMMARY.md  RUN_PROOF_TESTS_ALL_SERVERS.md  SETUP_PHASE_COMPLETE.txt  (+28 more)
coderef-context/: CHANGELOG.md  CLAUDE.md  CLI_INTEGRATION_TEST_RESULTS.md  CODEREF_USAGE_INSTANCES.md  CONTEXT-LEVERAGE-ANALYSIS.md  FILE_TREE.md  INTEGRATION-STATUS.md  INTEGRATION_PROOF.md  INTEGRATION_TEST_SUMMARY.md  ISSUES_AND_BUGS_IDENTIFIED.md  MIGRATION-TO-FILE-READER.md  PROOF-OF-ENHANCEMENT.md  PROOF-RESPONSE.json  PROOF_95_PERCENT.json  PYTHON-SCANNING-WORKFLOW.md  README.md  REFACTOR-COMPLETE.md  REFACTOR-PLAN.md  RESOURCE-GUIDE.md  ROOT-ORGANIZATION.md  SCHEMA.md  SYSTEM_REPORT.md  TESTING_COMPLETE.md  TESTING_SUMMARY.md  TEST_SUITE_SUMMARY.md  coderef-document-audit-reply.md  communication.json  document-io-inventory.json  phase1_sample_response.json  prove_95_percent.py  pyproject.toml  pytest.ini  quickref.md  run_integration_tests.py  server.py  server.py.backup  test_enhancement.py  test_output.txt  test_server_integration.py  test_simple.py
coderef-context/.claude/: settings.local.json
coderef-context/coderef/: workorder-log.txt
coderef-context/processors/: __init__.py  export_processor.py
coderef-context/src/: __init__.py  coderef_reader.py  complexity_analyzer.py  foundation_doc_generator.py  handlers_refactored.py  pattern_analyzer.py  schema_utils.py  validator.py
coderef-context/tests/: RUN_INTEGRATION_TESTS.md  TEST_EXPORT_PROCESSOR_SUMMARY.md  __init__.py  conftest.py  test_coderef_usage_trace.py  test_export_edge_cases.py  test_export_processor.py  test_integration.py  test_schema_utils.py  test_tools.py  test_tools_integration.py  test_workflow_integration.py
coderef-mcp/: API.md  DEPLOYMENT.md  IMPLEMENTATION-GUIDE.md  README.md  TESTING-GUIDE.md  constants.py  index.html  logger_config.py  pyproject.toml  server.py  tool_handlers.py  update_config.py
coderef-mcp/.coderef/: index.json
coderef-mcp/coderef/: models.py  workorder-log.txt
coderef-mcp/coderef_mcp.egg-info/: SOURCES.txt  requires.txt  top_level.txt
coderef-mcp/tests/: __init__.py
coderef-mcp/validation/: __init__.py
coderef-mcp/working/: integration-assessment.md
coderef-testing/: .coverage  AGENT_CONTINUATION_INSTRUCTIONS.md  AGENT_ENTRY_POINT.md  AGENT_IMPLEMENTATION_STATUS.md  AGENT_INSTRUCTIONS_VISUAL.md  AGENT_TASK_TRACKER.md  CLAUDE.md  CODEREF-SYSTEM-TEST-PLAN.md  CURRENT_STATUS.md  DOCUMENT-AUDIT-REPLY.md  DOCUMENT-IO-INVENTORY.json  PHASE_2_QUICKSTART.md  README.md  README_AGENT.md  SENTINEL_DEPRECATION_PROOF.md  START_HERE.md  TESTING_GUIDE.md  USER-GUIDE.md  emoji-scan.json  pyproject.toml  server.py.backup  server_additions.py  server_temp.py  test-diagram.mmd  test-export.json
coderef-testing/.claude/: settings.local.json
coderef-testing/coderef-context/: CONTEXT.md  context.json
coderef-testing/docs/: EXAMPLE_TEST_REPORT_SENTINEL_DEPRECATION.md  sentinel-deprecation-proof.md
coderef-testing/personas/: testing-expert.json
coderef-testing/src/: __init__.py  models.py  proof_generator.py  result_analyzer.py  test_coordinator.py  test_runner.py
coderef-testing/test-context/: context.json
coderef-testing/tests/: test_aggregator.py  test_analyzer.py  test_end_to_end_utilization.py  test_framework_detector.py  test_mcp_cache_validation.py  test_models.py  test_runner.py  test_utilization_edge_cases.py
docs-mcp/: .env.railway.example  CHATGPT-INTEGRATION-TROUBLESHOOTING.md  CLAUDE.md  COMPREHENSIVE-review.md  MANIFEST.in  MCP-SETUP-GUIDE.md  QUICK-START.md  README.md  RELEASE_NOTES.md  add_changelog_v1.3.0.py  audit-codebase-plan.json  check-consistency-plan.json  claude.json  constants.py  context_expert_models.py  establish-standards-plan.json  handler_decorators.py  handler_helpers.py  http_server.py  index.html  logger_config.py  my-guide.md  new-index.html  pyproject.toml  railway.json  schema_validator.py  server.py  test_http_simple.py  tool_handlers.py  tooling-plan.json  type_defs.py  user-guide.md  validation.py
docs-mcp/.claude/: commands.json  settings.local.json
docs-mcp/.coderef/: index.json
docs-mcp/coderef/: CHANGELOG_TOOLS_REVIEW.md  changes-made.json  tool-implementation-template.json  workorder-log.txt
docs-mcp/examples/: gitlab-ci.yml
docs-mcp/generators/: __init__.py  api_generator.py  changelog_generator.py  coderef_foundation_generator.py  config_generator.py  consolidation_engine.py  context_expert_generator.py  database_generator.py  dependency_generator.py  documentation_generator.py  inventory_generator.py  llm_output_parser.py  mermaid_formatter.py  output_formatters.py  plan_validator.py  planning_analyzer.py  planning_generator.py  test_generator.py
docs-mcp/mcp-specific-context/: feature-implementation-planning-standard.json
docs-mcp/schemas/: plan.schema.json  stub.schema.json
docs-mcp/tests/: __init__.py  (+2 more)
personas-mcp/: CLAUDE.md  MCP-SYNERGY-REPORT.md  PERSONAS-CREATED.md  add_domain_boundaries.py  create_research_scout.py  index.html  lloyd.html  my-guide.md  next5mcp.md  personas-mcp-improvements.json  pyproject.toml  server.py  update_lloyd_complete.py
(+2041 files in other folders)
