[project]
name = "docs-mcp"
version = "1.2.0"
description = "Enterprise-Grade MCP Server for Documentation Generation and Changelog Management"
readme = "README.md"
authors = [
    {name = "willh"},
    {name = "Claude Code AI"}
]
maintainers = [
    {name = "willh"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "mcp",
    "documentation",
    "changelog",
    "consistency",
    "standards",
    "code-generation",
    "ai-assistant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/anthropics/mcp-servers"
Documentation = "https://docs.claude.com/en/docs/claude-code"
Repository = "https://github.com/anthropics/mcp-servers"
Issues = "https://github.com/anthropics/mcp-servers/issues"

[project.scripts]
docs-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async test",
    "slow: mark test as slow running",
    "integration: mark test as integration test",
    "performance: mark test as performance test",
    "unit: mark test as unit test",
]
